attempting to stylessss

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,8 @@
+---
+---
+
+@import "{{ site.theme }}";
+
 // Breakpoints
 $large-breakpoint: 64em !default;
 $medium-breakpoint: 42em !default;
@@ -21,5 +26,3 @@ $code-text-color: #567482 !default;
 $border-color: #dce6f0 !default;
 $table-border-color: #e9ebec !default;
 $hr-border-color: #eff0f1 !default;
-
-@import "{{ site.theme }}";
