--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,24 @@
 ---
 
 @import "jekyll-theme-minimal";
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
+body {
+
+    font-family: 'Merriweather', serif;
+
+    h1, h2, h3 {
+        font-family: 'Merriweather', serif;
+    }
+
+    h4, h5, h6 {
+        font-family: 'Merriweather Sans';
+        font-weight: 400;
+    }
+
+    p {
+        font-family: 'Merriweather Sans', sans-serif;
+        font-weight: 300;
+    }
+}
