--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-
+        
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% elsif !site.logo %}
+          <h1 id="header-title"><a href="{{ "/" | absolute_url }}">LOGOS LEARNING</a></h1>
+          <h3 id="header-tagline">{{ site.description | default: site.github.project_tagline }}</h3>
         {% endif %}
-
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
@@ -30,8 +30,8 @@
 
         {% if site.show_downloads %}
         <ul class="downloads">
+          <li><a href="{{ "/about" }}"><strong>About</strong></a></li>
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
