--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,3 +22,15 @@ body {
         font-weight: 300;
     }
 }
+
+#header-title {
+    
+    h1.a {
+        color: black;
+        text-decoration: none;
+    }
+}
+
+#header-tagline {
+    font-style: italic;
+}
