--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,22 +4,42 @@
 @import "jekyll-theme-minimal";
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
+// dark color scheme
+$dark-text: #000000;
+$dark-accent-text: #000000;
+$dark-link-text: #000000;
+$dark-bg: #000000;
+
+// light color scheme
+$light-text: #090C02;
+$light-accent-text: #0D0C1D;
+$light-link-text: #161B33;
+$light-bg: #F1EDEE;
+
 body {
 
-    font-family: 'Merriweather', serif;
+    background-color: $light-bg;
+
+    font-family: 'Merriweather', serif;  
 
     h1, h2, h3 {
         font-family: 'Merriweather', serif;
+        color: $light-text;
     }
 
     h4, h5, h6 {
         font-family: 'Merriweather Sans';
+        color: $light-accent-text;
         font-weight: 400;
     }
 
     p {
         font-family: 'Merriweather Sans', sans-serif;
         font-weight: 300;
+    }
+
+    a {
+        color: $light-link-text;
     }
 }
 
