--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,13 +7,13 @@
 // dark color scheme
 $dark-text: #000000;
 $dark-accent-text: #000000;
-$dark-link-underline: #000000;
+$dark-link: #000000;
 $dark-bg: #000000;
 
 // light color scheme
 $light-text: #090C02;
 $light-accent-text: #0D0C1D;
-$light-link-underline: #434d7e;
+$light-link: #434d7e;
 $light-bg: #f4f7f8;
 
 body {
@@ -39,28 +39,18 @@ body {
     }
 
     a {
-        color: $light-text;
-        background:
-           linear-gradient(
-             to bottom,
-             var($light-link-text) 0%,
-             var($light-link-text) 100%
-           );
-        background-position: 0 100%;
-        background-repeat: repeat-x;
-        background-size: 4px 4px;
-        text-decoration: none;
-        transition: background-size .2s;
+        color: $light-link;
     }
-      
+
     a:hover {
-        background-size: 4px 50px;
+        text-decoration: underline;
     }
 
 }
 
+// header specific styling
+
 #header-title {
-    
     h1.a {
         color: black;
         text-decoration: none;
@@ -68,5 +58,6 @@ body {
 }
 
 #header-tagline {
+    font-family: 'Merriweather', serif;
     font-style: italic;
 }
