--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,8 +13,8 @@ $dark-bg: #000000;
 // light color scheme
 $light-text: #090C02;
 $light-accent-text: #0D0C1D;
-$light-link: #434d7e;
-$light-bg: #f4f7f8;
+$light-link: #7e5e43;
+$light-bg: #ffffff;
 
 body {
 
@@ -34,7 +34,7 @@ body {
     }
 
     p {
-        font-family: 'Merriweather Sans', sans-serif;
+        font-family: 'Merriweather', sans-serif;
         font-weight: 300;
     }
 
