--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,20 +20,15 @@
         {% endif %}
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p class="view"><a href="{{ site.github.repository_url }}">Set an Appointment</a></p>
         {% endif %}
 
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ "/about" }}"><strong>About</strong></a></li>
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{ "/tutors" }}">Tutors</a></li>
+          <li><a href="{{ "/resources" }}">Resources</a></li>
         </ul>
-        {% endif %}
+
       </header>
       <section>
 
@@ -41,10 +36,8 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>Soli Deo Gloria</p>
+        <p><small>This project is maintained by <a href="codyilardo.com">{{ site.github.owner_name }}</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
