--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,7 @@ $dark-bg: #000000;
 // light color scheme
 $light-text: #090C02;
 $light-accent-text: #0D0C1D;
-$light-link: #7e5e43;
+$light-link: #d46000;
 $light-bg: #ffffff;
 
 body {
