--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,13 @@
           <p id="header-tagline">{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">Set an Appointment</a></p>
-        {% endif %}
+        <p class="view"><a href="{{ "/tutors" }}">Set an Appointment</a></p>
+        <p class="view"><a href="{{ "/about" }}"><strong>About</strong></a></p>
+        <p class="view"><a href="{{ "/tutors" }}">Tutors</a></p>
+        <p class="view"><a href="{{ "/resources" }}">Resources</a></p>
 
         <ul class="downloads">
-          <li><a href="{{ "/about" }}"><strong>About</strong></a></li>
-          <li><a href="{{ "/tutors" }}">Tutors</a></li>
-          <li><a href="{{ "/resources" }}">Resources</a></li>
+          <li><a href="{{ "/tutors" }}">Set Appointment</a></li>
         </ul>
 
       </header>
