--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,13 +19,18 @@
           <p id="header-tagline">{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
 
-        <p class="view"><a href="{{ "/tutors" }}">Set an Appointment</a></p>
-        <p class="view"><a href="{{ "/about" }}"><strong>About</strong></a></p>
-        <p class="view"><a href="{{ "/tutors" }}">Tutors</a></p>
-        <p class="view"><a href="{{ "/resources" }}">Resources</a></p>
+        <!-- <p class="view"><a href="{{ site.github.repository_url }}">Set an Appointment</a></p> -->
 
-        <ul class="downloads">
-          <li><a href="{{ "/tutors" }}">Set Appointment</a></li>
+        <!-- <ul class="downloads">
+          <li><a href="{{ "/about" }}">About</a></li>
+          <li><a href="{{ "/tutors" }}">Tutors</a></li>
+          <li><a href="{{ "/resources" }}">Resources</a></li>
+        </ul> -->
+
+        <ul class="">
+          <li><a href="{{ "/about" }}">About</a></li>
+          <li><a href="{{ "/tutors" }}">Tutors</a></li>
+          <li><a href="{{ "/resources" }}">Resources</a></li>
         </ul>
 
       </header>
@@ -36,7 +41,7 @@
       </section>
       <footer>
         <p>Soli Deo Gloria</p>
-        <p><small>This project is maintained by <a href="codyilardo.com">{{ site.github.owner_name }}</a></small></p>
+        <p><small>This project is maintained by <a href="www.codyilardo.com" target="_blank">{{ site.github.owner_name }}</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
