messing with styling againnnnnnn

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           <li><a href="{{ "/resources" }}">Resources</a></li>
         </ul> -->
 
-        <ul class="">
+        <ul class="view">
           <li><a href="{{ "/about" }}">About</a></li>
           <li><a href="{{ "/tutors" }}">Tutors</a></li>
           <li><a href="{{ "/resources" }}">Resources</a></li>
