--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
           <li><a href="{{ "/resources" }}">Resources</a></li>
         </ul> -->
 
-        <ul class="view">
-          <li><a href="{{ "/about" }}">About</a></li>
-          <li><a href="{{ "/tutors" }}">Tutors</a></li>
-          <li><a href="{{ "/resources" }}">Resources</a></li>
+        <ul>
+          <li style="display: inline-block;"><a href="{{ "/about" }}">About</a></li>
+          <li style="display: inline-block;"><a href="{{ "/tutors" }}">Tutors</a></li>
+          <li style="display: inline-block;"><a href="{{ "/resources" }}">Resources</a></li>
         </ul>
 
       </header>
