--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,18 @@
         </ul> -->
 
         <ul>
-          <li style="display: inline-block;"><a href="{{ "/about" }}">About</a></li>
-          <li style="display: inline-block;"><a href="{{ "/tutors" }}">Tutors</a></li>
-          <li style="display: inline-block;"><a href="{{ "/resources" }}">Resources</a></li>
+          <li style="display: inline;">
+            <a href="{{ "/about" }}">
+              <h4>About</h4>
+          </a></li>
+          <li style="display: inline;">
+            <a href="{{ "/tutors" }}">
+              <h4>Tutors</h4>
+          </a></li>
+          <li style="display: inline;">
+            <a href="{{ "/resources" }}">
+              <h4>Resources</h4>
+          </a></li>
         </ul>
 
       </header>
@@ -40,7 +49,9 @@
 
       </section>
       <footer>
-        <p>Soli Deo Gloria</p>
+        <p><small>
+          Soli Deo Gloria: Glory to God Alone
+        </small></p>
         <p><small>This project is maintained by <a href="www.codyilardo.com" target="_blank">{{ site.github.owner_name }}</a></small></p>
       </footer>
     </div>
