change navigation list

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,17 +28,17 @@
         </ul> -->
 
         <ul>
-          <li style="display: inline;">
+          <li style="display: inline-block;">
             <a href="{{ "/about" }}">
-              <h4>About</h4>
+              <h4>ABOUT</h4>
           </a></li>
-          <li style="display: inline;">
+          <li style="display: inline-block;">
             <a href="{{ "/tutors" }}">
-              <h4>Tutors</h4>
+              <h4>TUTORS</h4>
           </a></li>
-          <li style="display: inline;">
+          <li style="display: inline-block;">
             <a href="{{ "/resources" }}">
-              <h4>Resources</h4>
+              <h4>RESOURCES</h4>
           </a></li>
         </ul>
 
