--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,7 +24,7 @@ body {
 
     h1, h2, h3 {
         font-family: 'Merriweather', serif;
-        color: $light-text;
+        color: $light-text !important;
     }
 
     h4, h5, h6 {
