--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,7 @@
 
     <!-- PAGE HEADER -->
     <header id="page-header" class="page-header" role="banner">
-      <img src="assets/img/letterhead_white.svg" alt="Logos Learning">
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <img id="header-logo" src="assets/img/letterhead_white.svg" alt="Logos Learning">
 
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
         <a href="/about" class="btn">About</a>
