--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,6 +60,11 @@ a:hover {
         color: $light-bg !important;
         text-decoration: none;
     }
+
+    .header-logo {
+        width: 90%;
+        max-width: 720px;
+    }
 }
 
 #header-tagline {
