--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,15 @@
 
     <!-- PAGE HEADER -->
     <header id="page-header" class="page-header" role="banner">
-      <img id="header-logo" src="assets/img/letterhead_white.svg" alt="Logos Learning">
 
+      <div>
+        <img id="header-logo" src="assets/img/letterhead_white.svg" alt="Logos Learning">
+      </div>
+
+      <div>
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
         <a href="/about" class="btn">About</a>
+      </div>
 
     </header>
 
