bigger header logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <!-- PAGE HEADER -->
     <header id="page-header" class="page-header" role="banner">
 
-      <div>
+      <div class="row">
         <img id="header-logo" src="assets/img/letterhead_white.svg" alt="Logos Learning">
       </div>
 
