--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,10 @@
 
       <img id="header-logo" src="assets/img/letterhead_white.svg" alt="Logos Learning">
 
+      <h2>
+        Classical Christian Education
+      </h2>
+      
       <br>
 
       <div class="row">
