--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,9 +61,9 @@ a:hover {
         text-decoration: none;
     }
 
-    .header-logo {
-        width: 90%;
-        max-width: fit-content;
+    img {
+        width: 90% !important;
+        max-width: 750px;
     }
 }
 
