--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,19 @@
     <!-- PAGE HEADER -->
     <header id="page-header" class="page-header" role="banner">
 
-      <img id="header-logo" src="assets/img/letterhead_white.svg" alt="Logos Learning">
+      <img 
+        id="header-logo" 
+        src="assets/img/letterhead_white.svg" 
+        alt="Logos Learning"
+        style="width: 85%; max-width: 800px;"  
+      >
 
       <div class="row">
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
         <a href="/about" class="btn">About</a>
+        <a href="/tutoring" class="btn">Tutoring</a>
+        <a href="/school" class="btn">School</a>
+        <a href=""></a>
       </div>
 
     </header>
